# WyLight

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .wercker  BlRequest.cpp  BlRequest.h  BlRequest_ut.cpp  BroadcastReceiver .h  BroadcastReceiver.cpp  BroadcastReceiver.h  BroadcastReceiver_ut.cpp  ClientSocket.cpp  ClientSocket.h  ComProxy.cpp  ComProxy.h  ComProxy_ut.cpp  CommandIO.c  CommandIO.h  CommandIO_ut.c  Endpoint.h  Flash.c  Flash.h  Format_Guideline.txt  MATH16.H  Makefile  Makefile.android  Makefile.bist  Makefile.cc_bl  Makefile.cc_fw  Makefile.cc_te  Makefile.cli  Makefile.docu  Makefile.filedownloader  Makefile.firmware  Makefile.in  Makefile.library  Makefile.sim  Makefile.ut  README.md  (+1436 more)
PCB_Schematic_Files/: WyLight_v6.brd  WyLight_v6.sch  WyLight_v6_bom.txt
PIC18 Bootloader/: PIC18 Bootloader.asm  PIC18 Bootloader.cof  PIC18 Bootloader.lst  PIC18 Bootloader.map  PIC18 Bootloader.mcp  PIC18 Bootloader.mcs  PIC18 Bootloader.mcw  Wifi-Bootloader_PIC18.py  bootconfig.inc  preprocess.inc
PIC18_Bootloader/: PIC18 Bootloader.HEX  PIC18 Bootloader.lst  Wifi-Bootloader_PIC18.py  devices.inc
WiflyControl_Xcode_Workspace.xcworkspace/: contents.xcworkspacedata
_debugging/: 10_load_driver.sh  gdbinit
android/: ic_launcher.odg  make_release.sh
artwork/: ic_launcher.xcf  ic_status.xcf
autom4te.cache/: output.1  requests  traces.0  traces.1
binary/: main.asm  main.cod  main.fcs  main.hex  main.lst  main.occ  main.var
bist/: main.cpp
boblight/: Makefile  boblight.conf  install.sh  main.cpp
boblight_client/: main.cpp
c++11_wrapper/: atomic  mutex
cc3200/: readme.txt
cc3200_gcc/: Makefile  depend.bl  depend.bl_sim  install.sh  install_webpages.sh  makedefs  uniflash.ucf  wifi_subsystem_servicepack_ota_1.0.0.1.2.sig
cc_bl/: Makefile.cc_bl  WyLight_cc_bl.ld  bootloader.h  firmware_loader.c  firmware_loader.h  main.c  tcp_server.c  tcp_server.h  wy_bl_network_if.c  wy_bl_network_if.h
cc_fw/: Board.cpp  Board.h  BroadcastTransmitter.cpp  BroadcastTransmitter.h  CC3200_Platform.cpp  CC3200_Platform.h  CPPTask.cpp  CPPTask.h  Makefile.cc_fw  NetworkDriver.cpp  NetworkDriver.h  SimplelinkCustomer.h  SimplelinkDriver.cpp  SimplelinkDriver.h  SimplelinkServers.cpp  SimplelinkServers.h  Task.cpp  Task.h  WifiConsumer.cpp  WifiConsumer.h  WyLight_cc_fw.ld  broadcast.c  broadcast.h  functional  main.cpp  pwm.c  pwm.cpp  pwm.h  server.c  server.h  wifi.c  wifi.cpp  wifi.h  wy_crc.c  wy_crc.h  wy_eeprom.c  wy_firmware.c  wy_firmware.cpp  wy_firmware.h  wy_network_if.c  (+2 more)
cc_te/: Makefile.cc_te  TestClass.cpp  TestClass.h  WyLight_cc_te.ld  _main.cpp  firmware_loader.c  firmware_loader.h  main.cpp  mini_cpp.cpp  tcp_server.c  tcp_server.h  wy_bl_network_if.c  wy_bl_network_if.h
cli/: Makefile  Makefile.cli  WiflyControlCli.cpp  WiflyControlCli.h  WiflyControlCmd.h
common/: CC3200_Platform.cpp  CC3200_Platform.h  FreeRTOS_Hooks.h  Pwm.cpp  Pwm.h  SimplelinkDriver.cpp  SimplelinkDriver.h  Timer.cpp  Timer.h  cpp_overrides.h  gpio_if.c  gpio_if.h  pinmux.c  pinmux.h  startup_gcc.c  timer_if.c  timer_if.h  uart_if.c  uart_if.h  wy_Adc.cpp  wy_Adc.h  wy_I2c.cpp  wy_I2c.h  wy_LockGuard.h  wy_Pwm.cpp  wy_Pwm.h  wy_Task.cpp  wy_Task.h  wy_Timer.cpp  wy_Timer.h  wy_fs.c  wy_fs.h  wy_fs_ut.c
docs/: Doxyfile  mainpage.dox
driverlib/: adc.c  adc.h  aes.c  aes.h  camera.c  camera.h  cpu.c  crc.c  crc.h  debug.h  des.c  des.h  flash.c  flash.h  gpio.c  gpio.h  hwspinlock.c  i2c.c  i2c.h  i2s.c  i2s.h  interrupt.c  interrupt.h  pin.c  pin.h  prcm.c  prcm.h  rom.h  rom_map.h  sdhost.c  sdhost.h  shamd5.c  shamd5.h  spi.c  spi.h  systick.c  systick.h  timer.c  timer.h  uart.c  (+7 more)
eclipse/: .cproject  .project
esp8266/: Makefile  blinky.c  esp8266.ino  wylight.c
examples/: shell_script_example.sh
exe/: WyLight_cc_bl.axf  WyLight_cc_bl.map  WyLight_cc_bl.sha  WyLight_cc_fw.axf  WyLight_cc_fw.map  WyLight_cc_fw.sha  WyLight_cc_te.axf  WyLight_cc_te.map  main.asm  main.cod  main.fcs  main.hex  main.lst  main.occ  main.var
filedownloader/: Makefile.filedownloader  WyFileDownloaderCli.cpp
firmware/: 18F26K22.H  CommandIO.c  CommandIO.h  CommandIO_ut.c  Flash.c  Flash.h  INLINE.H  INT18XXX.H  MATH16.H  Makefile  RingBuf.c  RingBuf.h  RingBuf_ut.c  ScriptCtrl.c  ScriptCtrl.h  ScriptCtrl_ut.c  Version.c  Version.h  VersionFile.h  broadcast.c  configure.scan  crc.c  crc.h  crc_ut.c  eeprom.c  eeprom.h  eeprom_file.cpp  eeprom_file_ut.cpp  eeprom_pic.c  eeprom_ram.c  error.c  error.h  external_eeprom.c  external_eeprom.h  iic.c  iic.h  isr_pic.c  ledstrip.c  ledstrip.h  ledstrip_ut.c  (+36 more)
include_files/: RingBuf.c  RingBuf.h  crc.c  crc.h  eeprom.c  eeprom.h  eeprom_nt.c  ledstrip.c  ledstrip.h  spi.c  spi.h  timer.c  timer.h  usart.c  usart.h
ios/: WCBroadcastReceiverWrapper.h  WCBroadcastReceiverWrapper.mm  WCEndpoint.h  WCEndpoint.m  WCViewController.h  WCViewController.m  WCWiflyControlWrapper.h  WCWiflyControlWrapper.mm
latex/: _bl_request_8h.tex  _broadcast_message_8h.tex  _broadcast_receiver_8cpp.tex  _broadcast_receiver_8h.tex  _broadcast_receiver__ut_8cpp.tex  _client_socket_8cpp.tex  _client_socket_8h.tex  _com_proxy_8cpp.tex  _com_proxy_8h.tex  _com_proxy__ut_8cpp.tex  _endpoint_8h.tex  _fw_command_8h.tex  _fw_request_8h.tex  _fw_response_8h.tex  _mask_buffer_8cpp.tex  _mask_buffer_8h.tex  _message_queue_8h.tex  _script_8h.tex  _telnet_proxy_8cpp.tex  _telnet_proxy_8h.tex  _telnet_proxy__ut_8cpp.tex  _wifly_color_8h.tex  _wifly_control_8cpp.tex  _wifly_control_8h.tex  _wifly_control__ut_8cpp.tex  _wifly_control_exception_8h.tex  _wifly_control_no_throw_8h.tex  _wifly_control_response_8h.tex  annotated.tex  class_base_buffer.eps  class_base_buffer.tex  class_bl_no_response_exception.eps  class_bl_no_response_exception.tex  class_broadcast_receiver.tex  class_client_socket.eps  class_client_socket.tex  class_com_proxy.tex  class_connection_lost.eps  class_connection_lost.tex  class_connection_timeout.eps  (+291 more)
not_used/: eeprom.c  ringbuffer.c
oslib/: osi.h  osi_tirtos.c
rn171_fw/: wifly7-400.img  wifly7-400.mif  wifly7-441.img  wifly7-441.mif
search/: all_1.js  (+195 more)
(+1865 files in other folders)
